--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -91,7 +91,7 @@
 
 .navigation {
     margin-left: auto;
-    border: 1px solid red;
+    
 
     &__list {
         list-style: none;
